tests/ui/impl-trait/cross-return-site-inference.stderr
error[E0282]: type annotations needed
  --> $DIR/cross-return-site-inference.rs:33:5
   |
LL |     Ok(())
   |     ^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
   = note: the type must also implement `Debug`
   = note: the type must also implement `From<&str>`
help: consider specifying the generic arguments
   |
LL |     Ok::<(), E>(())
   |       +++++++++

error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> $DIR/cross-return-site-inference.rs:38:16
   |
LL |     return Err(From::from("foo"));
   |                ^^^^^^^^^^^^^^^^^ cannot call associated function of trait
   |
   = note: the type must also implement `Debug`
help: use a fully-qualified path to a specific available implementation
   |
LL |     return Err(</* self type */ as From>::from("foo"));
   |                +++++++++++++++++++     +

error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> $DIR/cross-return-site-inference.rs:44:9
   |
LL |     Err(From::from("foo"))
   |         ^^^^^^^^^^^^^^^^^ cannot call associated function of trait
   |
   = note: the type must also implement `Debug`
help: use a fully-qualified path to a specific available implementation
   |
LL |     Err(</* self type */ as From>::from("foo"))
   |         +++++++++++++++++++     +

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0790.
For more information about an error, try `rustc --explain E0282`.
